# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
shaders/: fs.frag  vs.vert
src/: errors.c  file.c  glm.c  main.c  matrix.c  time.c  vector.c  vmath.c
src/shaders/: fragment.glsl  fs.glsl  gs.glsl  tcs.glsl  tesselation_control.glsl  tesselation_evaluation.glsl  vertex.glsl  vs.glsl
src/utils/: file.c  time.c  vmath.c
